added Part 04, Test Execution - conclusions